<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="google_maps_key">AIzaSyAuaJLF67DIn5TL1u9OYbQXO7kzd9moUIo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="tab_text_upcoming">Upcoming Elections</string>
    <string name="tab_text_saved">Saved Elections</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="election_information"><u>Election Information</u></string>
    <string name="voting_location"><u>Voting Location</u></string>
    <string name="ballot_information"><u>Ballot Information</u></string>
    <string name="address">Correspondence Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="location_permission_denied_explanation">Your location will not be shown. Click \'Settings\' if you changed your mind.</string>
    <string name="settings">Settings</string>
    <string name="clear"><u>Clear</u></string>

</resources>
