<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingBottom="8dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="30dp"
                app:layoutDescription="@xml/fragment_representative_scene"
                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/representative_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/title_style" />

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
                    android:hint="@string/address_line_1"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.address.line1}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title"
                    tools:text="Address Line 1" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_APT_NUMBER"
                    android:hint="@string/address_line_2"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.address.line2}"
                    tools:text="Address Line 2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.address.city}"
                    tools:text="City"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_REGION"
                    android:entries="@array/states"
                    android:hint="@string/state"
                    android:inputType="textPostalAddress"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city"
                    stateValue="@{viewModel.address.state}" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_EXTENDED_POSTAL_CODE"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@{viewModel.address.zip}"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/find_my_representatives"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/btnLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/use_my_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnSearch" />

                <TextView
                    android:id="@+id/representative_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_representatives"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLocation"
                    style="@style/title_style"/>

            </androidx.constraintlayout.motion.widget.MotionLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>